--- a/server/docker.html
+++ b/server/docker.html
@@ -13,16 +13,16 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/assets/normalize.css?v=1766694715"
+    <link rel="stylesheet" type="text/css" href="/assets/normalize.css?v=1766695876"
         media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/doctave-style.css?v=1766694715"
+    <link rel="stylesheet" type="text/css" href="/assets/doctave-style.css?v=1766695876"
         media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/katex.css?v=1766694715" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/prism-ghcolors.css?v=1766694715"
+    <link rel="stylesheet" type="text/css" href="/assets/katex.css?v=1766695876" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/assets/prism-ghcolors.css?v=1766695876"
         media="screen" />
 
     <script>
-        var DOCTAVE_TIMESTAMP = "1766694715";
+        var DOCTAVE_TIMESTAMP = "1766695876";
         var BASE_PATH = "/";
         var color = localStorage.getItem('doctave-color')
 
@@ -146,7 +146,8 @@
 
             </div>
             <div class='doctave-content'>
-                <p>You can download pre-made docker images from <a href="https://hub.docker.com/r/bolcom/unftp/tags">docker hub</a> e.g.:</p>
+                <p>This page explains how to run unFTP using Docker, including downloading pre-built images and configuring the container with environment variables and volume mounts.</p>
+<p>You can download pre-made docker images from <a href="https://hub.docker.com/r/bolcom/unftp/tags">docker hub</a> e.g.:</p>
 <pre><code class="language-sh">docker pull bolcom/unftp:v0.15.2-alpine
 docker pull bolcom/unftp:v0.15.2-scratch
 </code></pre>
@@ -169,6 +170,7 @@ docker pull bolcom/unftp:v0.15.2-scratch
   -ti \
   bolcom/unftp:v0.15.2-alpine
 </code></pre>
+<p>Now that we've covered Docker deployment, you may want to configure <a href="/server/cloud-storage">cloud storage backends</a> or set up <a href="/server/monitoring">monitoring</a> for your containerized deployment.</p>
 
             </div>
             <div class='sidebar-right'>
@@ -195,11 +197,11 @@ docker pull bolcom/unftp:v0.15.2-scratch
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="/assets/katex.js?v=1766694715"></script>
-    <script type="text/javascript" src="/assets/mermaid.js?v=1766694715"></script>
-    <script type="text/javascript" src="/assets/elasticlunr.js?v=1766694715"></script>
-    <script type="text/javascript" src="/assets/prism.js?v=1766694715"></script>
-    <script type="text/javascript" src="/assets/doctave-app.js?v=1766694715"></script>
+    <script type="text/javascript" src="/assets/katex.js?v=1766695876"></script>
+    <script type="text/javascript" src="/assets/mermaid.js?v=1766695876"></script>
+    <script type="text/javascript" src="/assets/elasticlunr.js?v=1766695876"></script>
+    <script type="text/javascript" src="/assets/prism.js?v=1766695876"></script>
+    <script type="text/javascript" src="/assets/doctave-app.js?v=1766695876"></script>
 
     
 </body>
