--- a/server/monitoring.html
+++ b/server/monitoring.html
@@ -13,16 +13,16 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/assets/normalize.css?v=1766694715"
+    <link rel="stylesheet" type="text/css" href="/assets/normalize.css?v=1766695876"
         media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/doctave-style.css?v=1766694715"
+    <link rel="stylesheet" type="text/css" href="/assets/doctave-style.css?v=1766695876"
         media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/katex.css?v=1766694715" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/prism-ghcolors.css?v=1766694715"
+    <link rel="stylesheet" type="text/css" href="/assets/katex.css?v=1766695876" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/assets/prism-ghcolors.css?v=1766695876"
         media="screen" />
 
     <script>
-        var DOCTAVE_TIMESTAMP = "1766694715";
+        var DOCTAVE_TIMESTAMP = "1766695876";
         var BASE_PATH = "/";
         var color = localStorage.getItem('doctave-color')
 
@@ -146,7 +146,8 @@
 
             </div>
             <div class='doctave-content'>
-                <h1 id="monitoring-with-prometheus">Monitoring with Prometheus</h1>
+                <p>This page explains how to enable Prometheus metrics collection in unFTP by configuring the HTTP interface.</p>
+<h1 id="monitoring-with-prometheus">Monitoring with Prometheus</h1>
 <p>To allow your <a href="https://prometheus.io">Prometheus</a> instance to scrape metrics from unFTP you have to enable unFTP's HTTP
 interface. This is done by specifying an HTTP bind address with the <code>--bind-address-http</code> argument or the 
 <code>UNFTP_BIND_ADDRESS_HTTP</code> environment variable. For example if you do:</p>
@@ -157,6 +158,7 @@ interface. This is done by specifying an HTTP bind address with the <code>--bind
 </code></pre>
 <p>Your will have Prometheus metrics exposed on all IP addresses and port 8080 at endpoint <code>http://../metrics</code>. </p>
 <p>Doing this will also expose an unFTP service information page at the HTTP root path.</p>
+<p>Now that we've covered monitoring, you may want to configure <a href="/server/ftps">FTPS/TLS encryption</a> or set up <a href="/server/cloud-storage">cloud storage backends</a>.</p>
 
             </div>
             <div class='sidebar-right'>
@@ -187,11 +189,11 @@ interface. This is done by specifying an HTTP bind address with the <code>--bind
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="/assets/katex.js?v=1766694715"></script>
-    <script type="text/javascript" src="/assets/mermaid.js?v=1766694715"></script>
-    <script type="text/javascript" src="/assets/elasticlunr.js?v=1766694715"></script>
-    <script type="text/javascript" src="/assets/prism.js?v=1766694715"></script>
-    <script type="text/javascript" src="/assets/doctave-app.js?v=1766694715"></script>
+    <script type="text/javascript" src="/assets/katex.js?v=1766695876"></script>
+    <script type="text/javascript" src="/assets/mermaid.js?v=1766695876"></script>
+    <script type="text/javascript" src="/assets/elasticlunr.js?v=1766695876"></script>
+    <script type="text/javascript" src="/assets/prism.js?v=1766695876"></script>
+    <script type="text/javascript" src="/assets/doctave-app.js?v=1766695876"></script>
 
     
 </body>
