--- a/server/index.html
+++ b/server/index.html
@@ -13,16 +13,16 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/assets/normalize.css?v=1766697338"
+    <link rel="stylesheet" type="text/css" href="/assets/normalize.css?v=1766698252"
         media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/doctave-style.css?v=1766697338"
+    <link rel="stylesheet" type="text/css" href="/assets/doctave-style.css?v=1766698252"
         media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/katex.css?v=1766697338" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/prism-ghcolors.css?v=1766697338"
+    <link rel="stylesheet" type="text/css" href="/assets/katex.css?v=1766698252" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/assets/prism-ghcolors.css?v=1766698252"
         media="screen" />
 
     <script>
-        var DOCTAVE_TIMESTAMP = "1766697338";
+        var DOCTAVE_TIMESTAMP = "1766698252";
         var BASE_PATH = "/";
         var color = localStorage.getItem('doctave-color')
 
@@ -146,11 +146,11 @@
 
             </div>
             <div class='doctave-content'>
-                <p><a href="https://crates.io/crates/unftp"><img src="https://img.shields.io/crates/v/unftp.svg" alt="Crate Version"></a>
-<a href="https://travis-ci.org/bolcom/unFTP"><img src="https://travis-ci.org/bolcom/unFTP.svg" alt="Build Status"></a> 
+                <h1 id="unftp---the-ftps-server-application">unFTP - The FTPS Server Application</h1>
+<p><a href="https://crates.io/crates/unftp"><img src="https://img.shields.io/crates/v/unftp.svg" alt="Crate Version"></a>
 <a href="https://hub.docker.com/r/bolcom/unftp/"><img src="https://img.shields.io/docker/pulls/bolcom/unftp.svg?maxAge=2592000?style=plastic" alt="Docker Pulls"></a>
 <a href="https://t.me/unftp"><img src="https://img.shields.io/badge/follow%20on-Telegram-brightgreen.svg" alt="Follow on Telegram"></a></p>
-<h1 id="unftp---the-ftps-server-application">unFTP - The FTPS Server Application</h1>
+<p><a href="https://repology.org/project/unftp/versions"><img src="https://repology.org/badge/vertical-allrepos/unftp.svg?exclude_unsupported=1" alt="Packaging status"></a></p>
 <p>unFTP is a FTP(S) server written in <a href="https://www.rust-lang.org">Rust</a> and built on top of <a href="https://github.com/bolcom/libunftp">libunftp</a> and the <a href="https://tokio.rs">Tokio</a> asynchronous run-time. It is <strong>un</strong>like your normal FTP server in that it provides:</p>
 <ul>
 <li>Configurable Authentication (e.g. Anonymous, <a href="https://en.wikipedia.org/wiki/Linux_PAM">PAM</a> or a JSON file).</li>
@@ -192,11 +192,11 @@ techniques on the inside of your perimeter.</p>
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="/assets/katex.js?v=1766697338"></script>
-    <script type="text/javascript" src="/assets/mermaid.js?v=1766697338"></script>
-    <script type="text/javascript" src="/assets/elasticlunr.js?v=1766697338"></script>
-    <script type="text/javascript" src="/assets/prism.js?v=1766697338"></script>
-    <script type="text/javascript" src="/assets/doctave-app.js?v=1766697338"></script>
+    <script type="text/javascript" src="/assets/katex.js?v=1766698252"></script>
+    <script type="text/javascript" src="/assets/mermaid.js?v=1766698252"></script>
+    <script type="text/javascript" src="/assets/elasticlunr.js?v=1766698252"></script>
+    <script type="text/javascript" src="/assets/prism.js?v=1766698252"></script>
+    <script type="text/javascript" src="/assets/doctave-app.js?v=1766698252"></script>
 
     
 </body>
